# calculator-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
calculator_mcp/: server.py
