[project]
name = "calculator-mcp"
version = "0.1.0"
description = "MCP server for calculator functions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0.0"
]

[project.scripts]
calculator-mcp = "calculator_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["calculator_mcp"]